--- a/src/components/imagelist.css
+++ b/src/components/imagelist.css
@@ -1,3 +1,11 @@
 .image-list {
-  border-block-end: ;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 0 10px;
+  grid-auto-rows: 10px;
+}
+
+.image-list img {
+  width: 250px;
+  grid-row-end: span 2;
 }
